--- a/backend/newsletter/templates/results_not_found.html
+++ b/backend/newsletter/templates/results_not_found.html
@@ -1,42 +1,4 @@
-<!doctype html>
-<html>
-<head>
-    <title></title>
-    <meta http-equiv="X-UA-Compatible" content="IEedge">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=3Ddevice-width,initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxanium|Roboto:300,400,500,700&display=swap"/>
-</head>
-<body style="background-color:#E5E5E5;">
-    <!-- Baner logo TON -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="font-size:23px;font-style:normal;font-weight:bold;text-align: center;color:#E5E5E5;  height: 60px; width:600px; padding: 10px; background-color: #0076BC;"><img style="width: 70px;" src="https://solarsystem.linea.org.br/img/tno_logo_projetos.png" alt="">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div><!-- Termina baner logo TON-->
-    <!-- baner titulo -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="font-family: Oxanium;font-weight: 100;font-size:23px;font-style:normal;font-weight:normal;text-align: center;color:#E5E5E5;  height: 60px; width:600px; padding: 10px; background-color: #0076BC;">LIneA Occultation Prediction Database
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div><!--  Termina baner titulo-->
+{% extends "email_base.tpl" %} {% block content %}
     <!-- titulo email -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="15" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
@@ -94,40 +56,6 @@
             </tbody>
         </table>
     </div><!-- termina paragrafo descadastrar -->
-    <!--  footer -->
-    <!--  supporters -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="text-align: center;color: rgb(79, 78, 78);  height: 76px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                            <span style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:13px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78); width:600px; padding: 10px; background-color: #F4F4F4;">LIneA is supported by</span><br>
-                            <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/capes.png" alt="">
-                            <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/cnpq.png" alt="">
-                            <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/faperj.png" alt="">
-                            <img style="width: 90px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/finep.png" alt="">
-                            <img style="width: 50px; padding: 8px;" src="https://solarsystem.linea.org.br/img/supporters/e-universo_square.png" alt="">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div><!-- termina supporters -->
-    <!-- barra rodapé -->
-    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
-            <tbody>
-                <tr>
-                    <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif, 'Arial Narrow', Arial, sans-serif;font-size:16px;font-style:normal;font-weight:bold;text-align: right;color:#E5E5E5;  height: 100%; width:600px; padding: 10px; background-color: #0076BC;">
-                            <span style="display: inline-block; vertical-align: middle;">Powered by</span>
-                            <a style="display: inline-block; vertical-align: middle;" href="http://www.linea.org.br/"><img style="width: 60px;" src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png" alt=""></a>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div><!-- termina barra rodapé -->
-    </body>
-</html>
+    {% include 'footer.html' %}
+{% endblock %} 
+</body>
