--- a/backend/newsletter/templates/results.html
+++ b/backend/newsletter/templates/results.html
@@ -5,7 +5,8 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: justify;color:#212121;  height: 10px; width:570px; padding: 10px; background-color: #F4F4F4;">Your customized occultation predicitions for [Semester Year/Month Year/Week Month Year]
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: justify;color:#212121;  height: 10px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                            Your customized occultation predicitions for 2014/12/01 - 31   
                         </div>
                     </td>
                 </tr>
@@ -32,7 +33,10 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 180px; width:570px; padding: 10px; background-color: #F4F4F4;">We are happy to provide you with your customized occultation predictions for the upcoming period. Besides the partial events listed below, you'll find attached a CSV file containing comprehensive information about each event. We look forward to further assisting you as you delve into the intricacies of stellar occultation phenomena while exploring the Solar System. <br><br>Should you wish to adjust your filter parameters, you can do so
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 180px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                            We are happy to provide you with your customized occultation predictions for the upcoming period. Besides the partial events listed below, you'll find a CSV file containing comprehensive information about each event. 
+                            We look forward to further assisting you as you delve into the intricacies of stellar occultation phenomena while exploring the Solar System. 
+                            <br><br>Should you wish to adjust your filter parameters, you can do so
                             <a href="#" style="color:#FB1010;text-decoration: none;"  target="_blank">here.</a><br><br>Yours sincerely,<br>
                             LIneA Team
                         </div>
@@ -53,7 +57,60 @@
                                     <tbody>
                                         <tr>
                                             <td>
-                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: left;color:#E5E5E5;  height: 20px;  padding: 10px;border-radius:0px; background-color: #0076BC;">Filter name - Occultation predictions found
+                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: left;color:#E5E5E5;  height: 20px;  padding: 10px;border-radius:0px; background-color: #0076BC;">
+                                                    {{filter_name}} - Occultation predictions found
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <!-- Termina titulo filtro -->
+    <!-- Campos -->
+    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
+        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
+            <tbody>
+                <tr>
+                    <td>
+                        <div style="text-align: center;color:#212121;  height: 30px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                            <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:670px;">
+                                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255);width:100%;">
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
+                                                    Date
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 20px;">
+                                                    Name
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 20px;">
+                                                    Mag
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 45px;">
+                                                    Velocity
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 20px;">
+                                                    Duration
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255); width: 20px;">
+                                                    Download <br> File
                                                 </div>
                                             </td>
                                         </tr>
@@ -71,76 +128,53 @@
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
-                    <td style="width:100px;">
-                        <div style="text-align: center;color:#E5E5E5;  height: 250px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                             <table align="center" border="0" cellpadding="18" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255); height:130px ;width:100%;">
+                    <td style="width:120px;">
+                        <div style="text-align: center;color:#E5E5E5;  height: 260px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                             <table align="center" border="0" cellpadding="10" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255); height:20px ;width:100%;">
                                     <tbody>
                                         <tr>
                                             <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 80px;">
-                                                    <a style="text-align: center; text-decoration: none;font-size: 13px;" href="#">2013 GY252</a>
-                                               </div>
+                                                {% for dates in date %} 
+                                                    <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 40px;">
+                                                        {{dates}}
+                                                    </div>
+                                                {% endfor %} 
                                             </td>
                                             <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 80px;">
-                                                    Trojan
-                                                </div>
+                                                {% for names in name %} 
+                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 20px;">
+                                                        {{names}}
+                                                    </div>
+                                                {% endfor %} 
                                             </td>
                                             <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 120px;">
-                                                     2024-03-18 13:27:09
-                                                 </div>
+                                               {% for mags in mag %} 
+                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 20px;">
+                                                        {{mags | floatformat:4}}
+                                                    </div>
+                                                {% endfor %}
                                             </td>
                                             <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 120px;">
-                                                    G (Gaia) 13.400
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr style="border: 1px solid">
-                                            <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 80px;">
-                                                    <a style="text-align: center; text-decoration: none;font-size: 13px;" href="#">2013 GY252</a>
-                                               </div>
+                                                {% for velocs in veloc %} 
+                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 45px;">
+                                                        {{velocs}} km/s
+                                                    </div>
+                                                {% endfor %}
                                             </td>
                                             <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 80px;">
-                                                    Trojan
-                                                </div>
+                                                {% for durations in duration %} 
+                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 25px;">
+                                                        {{durations  | floatformat:4}} s
+                                                    </div>
+                                                {% endfor %}
                                             </td>
                                             <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 120px;">
-                                                     2024-03-18 13:27:09
-                                                 </div>
+                                                {% for durations in duration %} 
+                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 10px;">
+                                                        <a style="text-align: center; text-decoration: none;font-size: 11px;" href="#">Download</a>
+                                                    </div>
+                                                {% endfor %}
                                             </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 120px;">
-                                                    G (Gaia) 13.400
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr style="border: 1px solid">
-                                            <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 80px;">
-                                                    <a style="text-align: center; text-decoration: none;font-size: 13px;" href="#">2013 GY252</a>
-                                               </div>
-                                            </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 80px;">
-                                                    Trojan
-                                                </div>
-                                            </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 120px;">
-                                                     2024-03-18 13:27:09
-                                                 </div>
-                                            </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
-                                                <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 120px;">
-                                                    G (Gaia) 13.400
-                                                </div>
-                                            </td>
-                                        </tr>
                                     </tbody>
                                 </table>
                         </div>
